[tool.poetry]
name = "changerelease"
version = "1.4.1"
description = "Sync GitHub Releases with CHANGELOG.md"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]
license = "MIT"
readme = "README.md"
# homepage = "https://changerelease.dropseed.io"
# documentation = "https://changerelease.dropseed.io"
repository = "https://github.com/dropseed/changerelease"
keywords = ["changelog", "github", "release", "changes"]

[tool.poetry.scripts]
changerelease = "changerelease.cli:cli"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.24.0"
click = "^7.1.2"
cls-client = "^1.4.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = "^20.8b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
